--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "AngularProject102": {
+    "HostMio": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/AngularProject102",
+            "outputPath": "dist/HostMio",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -59,18 +59,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "AngularProject102:build"
+            "browserTarget": "HostMio:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "AngularProject102:build:production"
+              "browserTarget": "HostMio:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "AngularProject102:build"
+            "browserTarget": "HostMio:build"
           }
         },
         "test": {
@@ -100,16 +100,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "AngularProject102:serve"
+            "devServerTarget": "HostMio:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "AngularProject102:serve:production"
+              "devServerTarget": "HostMio:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "AngularProject102"
+  "defaultProject": "HostMio"
 }
