--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/core": "~11.0.5",
     "@angular/forms": "~11.0.5",
     "@angular/http": "^7.2.16",
+    "@angular/localize": "~11.0.5",
     "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
-    "bootstrap": "^3.4.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "bootstrap": "^4.5.0",
     "ngx-clipboard": "14.0.2",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
