--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~11.0.5",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^4.5.0",
+    "jw-angular-pagination": "^1.2.0",
     "ngx-clipboard": "14.0.2",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
