--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@angular/service-worker": "~11.0.5",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@ngneat/hot-toast": "^3.4.3",
     "@ngneat/overview": "^2.0.2",
