--- a/package.json
+++ b/package.json
@@ -12,45 +12,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.5",
+    "@angular/animations": "~11.2.13",
     "@angular/cdk": "^11.2.13",
-    "@angular/common": "~11.0.5",
-    "@angular/compiler": "~11.0.5",
+    "@angular/common": "~11.2.13",
+    "@angular/compiler": "~11.2.13",
     "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.0.5",
-    "@angular/http": "^7.2.16",
-    "@angular/localize": "~11.0.5",
+    "@angular/forms": "~11.2.13",
+    "@angular/localize": "~11.2.13",
     "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.0.5",
-    "@angular/router": "~11.0.5",
-    "@angular/service-worker": "~11.0.5",
+    "@angular/platform-browser-dynamic": "~11.2.13",
+    "@angular/router": "~11.2.13",
+    "@angular/service-worker": "~11.2.13",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@ngneat/hot-toast": "^3.4.3",
     "@ngneat/overview": "^2.0.2",
-    "bootstrap": "^4.5.0",
     "ngx-clipboard": "14.0.2",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.5",
-    "@angular/cli": "~11.0.5",
-    "@angular/compiler-cli": "~11.0.5",
+    "@angular-devkit/build-angular": "~0.1102.18",
+    "@angular/cli": "~11.2.18",
+    "@angular/compiler-cli": "~11.2.13",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "~6.3.17",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "postcss": "^8.4.12",
     "protractor": "~7.0.0",
+    "tailwindcss": "^3.0.23",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
