--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@ngneat/hot-toast": "^3.4.3",
     "@ngneat/overview": "^2.0.2",
+    "@sentry/angular": "^6.18.2",
+    "@sentry/tracing": "^6.18.2",
     "ngx-clipboard": "14.0.2",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
