updated cards for deactivated links and updated version

--- a/angular.json
+++ b/angular.json
@@ -39,6 +39,7 @@
                 }
               ],
               "optimization": true,
+              "aot": true,
               "outputHashing": "all",
               "sourceMap": false,
               "namedChunks": false,
